--- a/userprofile/static/userprofile/css/post.css
+++ b/userprofile/static/userprofile/css/post.css
@@ -10,6 +10,7 @@ hr.post-line {
 .post-header-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .author {
@@ -33,6 +34,16 @@ hr.post-line {
     font-size: 17px;
     position: relative;
     bottom: 3px;
+}
+
+.timesince{
+    margin: 0 0 2px 5px;
+    font-size: 11px;
+    font-family: 'Noto Sans', sans-serif;
+    color: #000000;
+    opacity: .6;
+    letter-spacing: -1px;
+
 }
 
 .dropbtn {
