--- a/userprofile/static/userprofile/css/base.css
+++ b/userprofile/static/userprofile/css/base.css
@@ -32,6 +32,10 @@ body{
     padding: 20px 15px 10px 20px;
     z-index: 1;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    word-wrap: break-word;
+    overflow-y: scroll;
+    background-color: #ffffff;
+    border-radius: 45px;
  }
 
 
@@ -53,13 +57,6 @@ body{
     position: relative;
     right: 40px;
     border-radius: 0 45px 45px 0;
-}
-
-.base-container > .main-bar {
-    word-wrap: break-word;
-    overflow-y: scroll;
-    background-color: #ffffff;
-    border-radius: 45px;
 }
 
 .base-container > div::-webkit-scrollbar {
@@ -92,21 +89,18 @@ body{
     .main-bar{
         height: 100%;
         margin: 0;
+        padding: 60px 0 0 0;
         min-width: 300px;
+        border-radius: 0;
     }
     
     .base-container{
         max-width: 120vw;
-        
+        height: 100vh;
     }
     
     .left-bar{
-        min-width: 110px;
-        max-width: 50px;
-        left: 0;
-        height: 10;
-        transform: translate(50px);
-        margin-left: -50px;
+        display: none;
     }
     
     .left{
