--- a/userprofile/static/userprofile/css/navbar.css
+++ b/userprofile/static/userprofile/css/navbar.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     max-width: 1300px;
     width: 100%;
+    top: 0;
     padding: 15px;
     display: flex;
     justify-content: flex-end;
@@ -21,10 +22,25 @@
     font: 15px sans-serif;
     text-align: center;
     align-self: center;
-    width: 30;
-    height: 30;
+    width: 35px;
+    height: 35px;
     border-radius: 100%;
     color: rgb(199, 199, 199);
     background-image: linear-gradient(135deg, #ffcf2f 0%, #e73200 100%);
     text-decoration: none;
+}
+
+@media (max-width: 630px) {
+
+    .nav-container{
+        padding: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        z-index: 2;
+        backdrop-filter: blur(13px) saturate(180%);
+        background-color: rgba(17, 25, 40, 0.5);
+        transition: all .5s cubic-bezier(0.45, 0.38, 0, 0.99);
+    }
+
 }
