--- a/userprofile/templates/userprofile/base.html
+++ b/userprofile/templates/userprofile/base.html
@@ -47,5 +47,22 @@
 
     {% block script %}
     {% endblock %}
+    <script>
+    var lastScrollTop = 0;
+    var navbar = document.querySelector(".nav-container");
+    var specialBlock = document.querySelector(".main-bar");
+
+    specialBlock.addEventListener("scroll", function() {
+    var currentScroll = specialBlock.scrollTop;
+    if (currentScroll > lastScrollTop) {
+        // Scroll down
+        navbar.style.top = "-80px";
+    } else {
+        // Scroll up
+        navbar.style.top = "0";
+    }
+    lastScrollTop = currentScroll;
+    });
+    </script>
 </body>
 </html>
