Fixed responsive Js profilePage

--- a/userprofile/static/userprofile/css/post.css
+++ b/userprofile/static/userprofile/css/post.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi&family=Lora&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 hr.post-line {
     border: 0;
@@ -107,12 +107,13 @@ hr.post-line {
 }
 
 .card {
-    font-family: "Merriweather", serif;
-    font-size: 18px;
+    /* font-family: "Merriweather", serif; */
+    font-family: "Urbanist", sans-serif;
+    font-size: 16px;
     text-decoration: none;
     color: black;
     margin: 20px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .post-img{
