--- a/userprofile/static/userprofile/css/profile.css
+++ b/userprofile/static/userprofile/css/profile.css
@@ -7,7 +7,6 @@
 }
 
 
-
 .left {
     display: flex;
     justify-content: flex-start;
@@ -16,203 +15,6 @@
     width: 90%;
     height: 100%;
     overflow: hidden;
-    padding: 0 20px 0 0;
+    padding: 100px 20px 0 0;
 }
 
-
-.user-info{
-    margin: 130px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-}
-.user-info > #profile-btn{
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-}
-header > h3 {
-    font-family: 'Noto Sans', sans-serif;
-    margin: 10px 0 0 0;
-    color: #2d6b6d;
-}
-
-.btn-follow , .btn-unfollow {
-    margin: 15px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    height: 30px;
-    background-color: rgba(22, 53, 54, 0.9);
-    border-radius: 10px;
-}
-
-.btn-unfollow {
-    background-color: rgba(214, 148, 6, 0.9);
-
-}
-
-.btn-follow > a, .btn-unfollow > a {
-    text-decoration: none;
-    font-family: 'Anek Gurmukhi', sans-serif;
-    position: relative;
-    top: 2px;
-    color: white;
-    font-weight: 200;
-}
-
-.rel {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    width: 100%;
-    margin: 25px 0 0 0;
-}
-
-.rel > button {
-    border: none;
-    background: none;
-    width: 55px;
-    margin: 0 2% 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    font-family: 'Noto Sans', sans-serif;
-    text-decoration:none;
-    color: #676e6e;
-    text-decoration: none;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.rel > button > p {
-    margin: 1px 0 0 0;
-}
-.rel:nth-child(2) {
-    border-right: 1px solid #ff6550;
-    border-left: 1px solid #ff1e00;
-}
-
-.l  {
-    color: rgba(134, 134, 134, .5);
-    cursor: default
-}
-
-.menu-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.menu {
-    padding: 0;
-    list-style: none;
-    margin: 70px 0 0 0;
-    font-family: 'Noto Sans', sans-serif;
-    display: inline-block;
-    width: 80%;
-}
-
-.menu > li > a {
-    color: rgba(22, 53, 54, .5);
-    text-decoration: none;
-    align-self: center;
-    justify-self: center;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-self: center;
-    align-items: center;
-    background-color: #ffffff;
-    border-radius: 10px;
-    transition-duration: .3s;
-}
-
-.menu > li {
-    margin: 10px 0 0;
-    height: 40px;
-    position: relative;
-}
-
-.menu > li> a:hover{
-    color: transparent;
-    background-color: #ffa600;
-}
-
-
-.menu-img {
-    opacity: 0.5;
-    width: 18px;
-    height: 18px;
-    margin: 0 12px;
-    position: relative;
-}
-
-.menu > li > a:hover .menu-img {
-    left: 43%;
-    margin: 0;
-    padding: 0;
-    border: none;
-    filter: brightness(0) saturate(100%) invert(99%) sepia(99%) saturate(16%) hue-rotate(213deg) brightness(103%) contrast(100%);;
-    opacity: 1;
-    transition-duration: .3s;
-  }
-
-#signout-btn {
-    background-color: rgb(255, 187, 187);
-}
-#signout-btn:hover {
-    background-color: rgb(151, 26, 26);
-}
-
-ul > hr {
-    border: 0;
-    height: 1px;
-    background: #333;
-    background-image: linear-gradient(to right, #ccc, #333, #ccc);
-    z-index: -1;
-}
-
-footer{
-    width: 70%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-}
-
-footer > p {
-    font-family: 'Noto Sans', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 10px;
-    font-weight: 600;
-}
-
-@media (max-width:630px){
-    .user-info, footer{
-        display: none;
-    }
-
-    .menu > li, li a {
-        width: 40px;
-    }
-
-    .menu li a p{
-        display: none;
-    }
-    .menu-img:hover {
-        position: absolute;
-        display: flex;
-        margin: 0;
-        left: 0;
-        padding: 0;
-    }
-}
