--- a/static/css/alert.css
+++ b/static/css/alert.css
@@ -18,6 +18,7 @@
     border-radius: 20px;
     text-align: center;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(34, 121, 0, 0.3);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
@@ -29,6 +30,7 @@
     border-radius: 20px;
     text-align: center;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(0, 121, 115, 0.2);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
@@ -40,6 +42,7 @@
     border-radius: 20px;
     text-align: center;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(134, 121, 0, 0.5);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
@@ -51,6 +54,7 @@
     border-radius: 20px;
     text-align: center;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(208, 4, 18, 0.5);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
