--- a/userprofile/static/userprofile/css/post.css
+++ b/userprofile/static/userprofile/css/post.css
@@ -133,7 +133,7 @@ hr.post-line {
     
 }
 
-.like, .comment, .save, .share{
+.comment, .save, .share{
     filter: brightness(0) saturate(100%) invert(33%) sepia(4%) saturate(4%) hue-rotate(96deg) brightness(91%) contrast(88%);
 }
 
