--- a/userprofile/static/userprofile/css/post.css
+++ b/userprofile/static/userprofile/css/post.css
@@ -130,14 +130,18 @@ hr.post-line {
 
  .post-icon {
     width: 15px;
-    
+    height: 15px;
 }
 
-.comment, .save, .share{
+.like {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+
+
+.icons, .like p{
     filter: brightness(0) saturate(100%) invert(33%) sepia(4%) saturate(4%) hue-rotate(96deg) brightness(91%) contrast(88%);
-}
-
-.comment{
     display: flex;
     justify-content: center;
     align-items: center;
