--- a/userprofile/templates/userprofile/base.html
+++ b/userprofile/templates/userprofile/base.html
@@ -20,6 +20,8 @@
     <link rel="icon" href="{% static 'img/logo.png' %}" type="image/x-icon">
     <!-- postform -->
     <link rel="stylesheet" href="{% static 'userprofile/css/postform.css' %}">
+    <!-- Flaction -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     {% block style %}{% endblock %}
 </head>
 <body>
