--- a/userprofile/static/userprofile/css/post.css
+++ b/userprofile/static/userprofile/css/post.css
@@ -116,8 +116,19 @@ hr.post-line {
     font-weight: 500;
 }
 
-.post-img{
+.square-photo{
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
     border-radius: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.post-img{
+    width: 100%;
+    height: auto;
+
 }
 
 .post-footer-container{
