--- a/userprofile/templates/userprofile/include/postform.html
+++ b/userprofile/templates/userprofile/include/postform.html
@@ -5,7 +5,7 @@
 
 <form class="postform" id="postform" action="{% url 'home:home' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <div id="profile-btn" class="nav-icon">{{ requsername|slice:":1"|upper }}</div>
+    <div id="profile-btn"><img class="user-avatar" id="user-avatar" src="{{ reqavatar }}" alt=""></div>
     {{ postform|safe }}
     <div class="pf-footer">
         <div class="pf-btn">
