--- a/userprofile/static/userprofile/css/navbar.css
+++ b/userprofile/static/userprofile/css/navbar.css
@@ -16,19 +16,17 @@
 }
 
 #profile-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font: 15px sans-serif;
-    text-align: center;
-    align-self: center;
     width: 35px;
     height: 35px;
     border-radius: 100%;
-    color: rgb(199, 199, 199);
-    background-image: linear-gradient(135deg, #ffcf2f 0%, #e73200 100%);
-    text-decoration: none;
+    overflow: hidden;
 }
+
+.user-avatar{
+    width: 35px;
+    height: auto;
+}
+
 
 @media (max-width: 630px) {
 
