--- a/userprofile/static/userprofile/css/postform.css
+++ b/userprofile/static/userprofile/css/postform.css
@@ -11,7 +11,7 @@
     align-content: flex-end;
 }
 
-.postform > #profile-btn {
+.postform #profile-btn,.postform #profile-btn #user-avatar {
     display: flex;
     align-self: flex-start;
     margin: 0 0 10px 0;
